新增log4j2.yml与view切面

--- a/learning2021/xaw-diary-parent/diary-service/src/main/resources/templates/index.html
+++ b/learning2021/xaw-diary-parent/diary-service/src/main/resources/templates/index.html
@@ -20,8 +20,9 @@
             //请求媒体类型
             contentType: "application/json;charset=UTF-8",
             //请求地址
-            url: "http://localhost:8080/icbc-ob/hello/ask",
+            url: "http://localhost:8080/diary/hello/ask",
             //数据
+            // data: {'userName':userName,'password':password},
             data: "CoCo",
             //请求成功
             success: function (result) {
